...
        cv.translatesAutoresizingMaskIntoConstraints = false
        return cv
    }()

    private let sendButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Send", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .tennéOrTawny
        button.layer.cornerRadius = 25
        button.titleLabel?.font = .boldSystemFont(ofSize: 16)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
...
        setupConstraints()

        NotificationCenter.default.addObserver(self, selector: #selector(cartDidUpdate), name: .cartUpdated, object: nil)
        orders = CartManager.shared.items

        sendButton.addTarget(self, action: #selector(sendButtonTapped), for: .touchUpInside)
        dishCollection.accessibilityIdentifier = "orderCollection"
        sendButton.accessibilityIdentifier = "sendButton"
    }

    private func configure() {
        title = "Review Food"
        dishCollection.dataSource = self
...
