...
        super.viewDidLoad()
        NotificationCenter.default.addObserver(self, selector: #selector(likeDidChange), name: .changeDishLike, object: nil)
        loadLikedDishes()
        configure()
        setupViews()
        setupConstraints()
        collectionRestaurantCell.accessibilityIdentifier = "myListCollection"
    }

    @objc private func likeDidChange() {
        loadLikedDishes()
        collectionRestaurantCell.reloadData()
    }
...
